--- a/style/global.scss
+++ b/style/global.scss
@@ -81,6 +81,7 @@ nav * {
   }
   .bottom-navigation{
     margin-top: -116px;
+    margin-bottom: 50px;
   }
 }
 
